cargo-features = ["rename-dependency"]
[package]
name = "uniresid"
version = "0.1.4"
description = "URI (Uniform Resource Identifier) parser and data structures"
authors = [
    "Chance Dinkins <chanceusc@gmail.com>",
    "Richard Walters <rwalters@digitalstirling.com>",
    "Martin Fischer <martin@push-f.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["parser-implementations"]
keywords = ["uri", "parser", "rfc3986", "uris"]
repository = "https://github.com/chanced/uniresid"
exclude = ["notes.md"]

[dependencies]
once_cell = "1.5"
thiserror = "1.0"


serde_ = { optional = true, version = "1", package = "serde" }
url_ = { optional = true, version = "2.2", package = "url" }
[features]
default = ["serde", "url"]
serde = ["serde_"]
url = ["url_"]
